Corrected image locations again

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="/images/bc01.jpg" alt="Briar Chapel Aerial" width="1600" height="800">
+  <img class="w3-image" src="images/bc01.jpg" alt="Briar Chapel Aerial" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
     <h1 class="w3-xxlarge">Hannah-Taylor Team</h1>
   </div>
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
   <!-- The Team Section -->
   <div class="w3-row w3-padding-64" id="outteam">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="/images/swing01.jpg" class="w3-round w3-image w3-opacity-min" alt="Swing" width="600" height="750">
+     <img src="images/swing01.jpg" class="w3-round w3-image w3-opacity-min" alt="Swing" width="600" height="750">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
     </div>
 
     <div class="w3-col l6 w3-padding-large">
-      <img src="/images/house01.jpg" class="w3-round w3-image w3-opacity-min" alt="Testimonials" style="width:100%">
+      <img src="images/house01.jpg" class="w3-round w3-image w3-opacity-min" alt="Testimonials" style="width:100%">
     </div>
   </div>
 
