Minor content update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6 {
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
   <img class="w3-image" src="images/bc01.jpg" alt="Briar Chapel Aerial" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge"></h1>
+    <h1 class="w3-xxlarge">Hannah-Taylor Team</h1>
   </div>
 </header>
 
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center">The Team</h1><br>
       <h5 class="w3-center">Serving the Triangle since 2014</h5>
-      <p class="w3-large">Our team consists of Jenna, Jim, and Ross.</p>
+      <p class="w3-large">Our team consists of Jenna-Leigh, Jim, and Ross.</p>
       <p class="w3-large w3-text-grey w3-hide-medium">Jenna-Leigh Hannah was born and raised in Durham, North Carolina. She attended high school at Saint Mary's School in Raleigh and then received her bachelor's degree from Michigan State University. She currently resides in Chapel Hill. Jenna prides herself in her ability to find properties that are custom-tailored to her clients' needs. First-time home buyers find it particularly easy to work with Jenna as she knows the ins and outs of what it takes to find that first special home. She also has at her fingertips the knowledge of excellent financing options for first-time buyers. Many former renters have found that Jenna-Leigh can put them into their own home at a price that is similar to the rent they are paying, and avail them of the tax advantages that come with home ownership. On the seller's side, she works hard to get you the best return on your home investment. She will support your listing with additional advertising and open houses to make your sale presentation the best in your neighborhood.</p>
       <p class="w3-large">Jim Taylor has lived in the Triangle area for over 30 years and prides himself in his vast knowledge of the surrounding area. He received his Political Science/Public Administration degree from Michigan State University and, for a brief period of time, attended law school in Michigan. He resides in Durham, with his wife Janet, who works for Duke Clinical Research Institute. Jim specializes in negotiation. For over 20 years, Jim represented several Fortune 500 companies and was integral in completion of many multi-year, multi-million dollar contracts. Jim brings his negotiation skills to the table for all Hannah-Taylor Team clients. He will work for you, whether you are the buyer or the seller, to get the best result possible.</p>
       <p class="w3-large w3-text-grey w3-hide-medium">Ross Hannah was born and raised in Concord, North Carolina and moved to Raleigh in 2003 to attend North Carolina State University. He then realized that the Triangle is where he wanted to stay. Upon graduating from North Carolina State University, Ross began working in the field of technology, and through his personal real estate transactions, Ross saw opportunities to make real estate transactions more efficient by leveraging technology, thus he was motivated to start working in real estate in order to help buyers and sellers accomplish their goals more efficiently. Ross is the team's technology guru and enjoys showing properties on nights and weekends. He is also very knowledgeable with investment properties, as he has invested in the Triangle himself and is a member of several Triangle-based real estate investment organizations.</p>
