--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
 <div class="w3-content" style="max-width:1100px">
 
   <!-- The Team Section -->
-  <div class="w3-row w3-padding-64" id="outteam">
+  <div class="w3-row w3-padding-64" id="ourteam">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
      <img src="images/swing01.jpg" class="w3-round w3-image w3-opacity-min" alt="Swing" width="600" height="750">
     </div>
