--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <title>Under Construction</title>
@@ -16,22 +17,33 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Hannah-Taylor Team</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#theteam" class="w3-bar-item w3-button">The Team</a>
-      <a href="#testimonials" class="w3-bar-item w3-button">Testimonials</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
-    </div>
+    <a href="#home" class="w3-bar-item w3-button">  
+<!DOCTYPE html>
+<html>
+<title>Under Construction</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
+}
+</style>
+<body>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">Under Construction</a>
   </div>
 </div>
 
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="images/bc01.jpg" alt="Briar Chapel Aerial" width="1600" height="800">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Under Construction</h1>
+</body>
+</html></a>
   </div>
-</header>
+</div>
+
 </body>
 </html>
