--- a/index.html
+++ b/index.html
@@ -1,49 +1,9 @@
-  
 <!DOCTYPE html>
 <html>
-<title>Under Construction</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
-</style>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">  
-<!DOCTYPE html>
-<html>
-<title>Under Construction</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
-</style>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Under Construction</a>
-  </div>
-</div>
-
-</body>
-</html></a>
-  </div>
-</div>
-
-</body>
+  <head>
+    <meta http-equiv="Refresh" content="0; url=//www.751realty.com" />
+  </head>
+  <body>
+    <p>Please follow <a href="//www.751realty.com/">this link</a>.</p>
+  </body>
 </html>
