--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url=//www.751realty.com" />
+    <meta http-equiv="Refresh" content="0; url=http://751realty.com/" />
   </head>
   <body>
-    <p>Please follow <a href="//www.751realty.com/">this link</a>.</p>
+    <p>Please follow <a href="http://751realty.com/">this link</a>.</p>
   </body>
 </html>
